--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,19 @@
 <% include ./partials/header.ejs%>
-<h3>Login</h3>
+<div class="container text-center"> 
+    <form class="form-signin" action="/login" method="POST">
+        <h3 class="h3 mb-3 font-weight-normal">Please sign in</h3>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" class="form-control" name="username" placeholder="Email address" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" class="form-control mb-3" name="password" placeholder="Password" required>
+        
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" value="remember-me"> Remember me
+            </label>
+        </div>
 
-<form action="/login" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <input type="submit" value="login">
-</form>
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="login">
+    </form>
+</div>
 <% include ./partials/footer.ejs%>
