--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
     <body>
         
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="/">YelpCamp</a>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
