--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,58 @@
 <% include ./partials/header.ejs%>
 
-<h3>Please sign in</h3>
-
-<form action="/register" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Sign up</button>
-</form>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-9 ">
+            <h4 class="mb-3">Please sign in!</h4>
+            <form action="/register" method="POST" class="needs-validation" novalidate>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="firstName">First name</label>
+                        <input type="text" class="form-control" placeholder="" value="" required>
+                        <div class="invalid-feedback">
+                            Valid first name is required.
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="lastName">Last name</label>
+                        <input type="text" class="form-control" placeholder="" value="" required>
+                        <div class="invalid-feedback">
+                            Valid last name is required.
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="mb-3">
+                    <label for="username">Username</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">@</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Username" required>
+                        <div class="invalid-feedback" style="width: 100%;">
+                            Your username is required.
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="mb-3">
+                    <label for="Email">Email address</label>
+                    <input type="email" class="form-control" name="username" placeholder="you@example.com" required autofocus>
+                    <div class="invalid-feedback">
+                        Please enter a valid email address for shipping updates.
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="inputPassword">Password</label>
+                    <input type="password" class="form-control mb-3" name="password" placeholder="Password" required>
+                </div>
+                
+                <input class="btn btn-lg btn-primary btn-block" type="submit" value="Sign in">
+            </form>
+            
+        </div>
+    </div>
+</div>
 
 <% include ./partials/footer.ejs%>
+
